k8s/work-10/task-1/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: work10-deployment-backend
  namespace: app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: wbitt/network-multitool
          name: multitool-backend
          # env:
          #   - name: HTTP_PORT
          #     value: "8080"
          #   - name: HTTPS_PORT
          #     value: "8443"
