k8s/work-10/task-1/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: work10-svc-backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: multitool-http
      port: 80
    - name: multitool-https
      port: 443
