k8s/work-10/task-1/networkpolicy-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-allow-from-frontend-to-backend
  namespace: app
spec:
  podSelector:
    matchLabels: 
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            app: frontend
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-allow-from-backend-to-cache
  namespace: app
spec:
  podSelector:
    matchLabels: 
      app: cache
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            app: backend
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
