k8s/work-10/task-1/networkpolicy-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-deny
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
